# my-langgraph-agent-ollama

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_agent.py
src/agent/: __init__.py  config.py  graph.py  nodes.py  state.py
tests/: test_nodes.py
